修改配置文件

--- a/supervisors/tornado.conf
+++ b/supervisors/tornado.conf
@@ -1,8 +1,5 @@
 [group:tornadoes]
 programs=tornado-8001,tornado-8002,tornado-8003
-
-
-
 [program:tornado-8001]
 command=python /root/github/tornado/supervisors/tornado1.py 
 directory=/var/www
@@ -29,3 +26,21 @@ autorestart=true
 redirect_stderr=true
 stdout_logfile=/var/log/tornado.log
 loglevel=info
+
+[supervisord]
+logfile = /tmp/supervisord.log
+logfile_maxbytes = 50MB
+logfile_backups=10
+loglevel = info
+pidfile = /tmp/supervisord.pid
+nodaemon = false
+minfds = 1024
+minprocs = 200
+umask = 022
+user = chrism
+identifier = supervisor
+directory = /tmp
+nocleanup = true
+childlogdir = /tmp
+strip_ansi = false
+environment = KEY1="value1",KEY2="value2"
