增加用户名

--- a/supervisors/tornado.conf
+++ b/supervisors/tornado.conf
@@ -3,7 +3,7 @@ programs=tornado-8001,tornado-8002,tornado-8003
 [program:tornado-8001]
 command=python /root/github/tornado/supervisors/tornado1.py 
 directory=/var/www
-user=www-data
+user=root
 autorestart=true
 redirect_stderr=true
 stdout_logfile=/var/log/tornado.log
@@ -12,7 +12,7 @@ loglevel=info
 [program:tornado-8002]
 command=python /root/github/tornado/supervisors/tornado2.py 
 directory=/var/www
-user=www-data
+user=root
 autorestart=true
 redirect_stderr=true
 stdout_logfile=/var/log/tornado.log
@@ -21,7 +21,7 @@ loglevel=info
 [program:tornado-8003]
 command=python /root/github/tornado/supervisors/tornado3.py 
 directory=/var/www
-user=www-data
+user=root
 autorestart=true
 redirect_stderr=true
 stdout_logfile=/var/log/tornado.log
