--- a/supervisors/tornado.conf
+++ b/supervisors/tornado.conf
@@ -37,7 +37,7 @@ nodaemon = false
 minfds = 1024
 minprocs = 200
 umask = 022
-user = chrism
+user = root
 identifier = supervisor
 directory = /tmp
 nocleanup = true
